feat[swagger]: campaign road /campaign add
